--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-i18next": "^11.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.35.0",
     "uswds": "^2.11.2",
     "web-vitals": "^1.1.2"
   },
